# iroh-ble-transport

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  mise.toml
.config/: nextest.toml
.github/actions/decrypt-secrets/: action.yml
.github/secrets/: README.md  android-release.jks.age  apple-api-key.p8.age  ios-appstore.mobileprovision.age  ios-dist.p12.age  mas-app.p12.age  mas-appstore.provisionprofile.age  mas-installer.p12.age  recipients.txt  secrets.env.age
.github/workflows/: ci.yml  release.yml
crates/iroh-ble/: Cargo.toml
crates/iroh-ble-transport/: Cargo.toml
crates/iroh-ble-transport/examples/: central.rs  initialization.rs  iroh_ble.rs  peripheral.rs
crates/iroh-ble-transport/src/: error.rs  lib.rs
crates/iroh-ble-transport/src/transport/: dedup.rs  driver.rs  events.rs  hook.rs  interface.rs  l2cap.rs  mod.rs  mtu.rs  peer.rs  pipe.rs  pipe_watchdog.rs  registry.rs  reliable.rs  routing.rs  routing_v2.rs  store.rs  test_util.rs  transport.rs  watchdog.rs
crates/iroh-ble-transport/tests/: integration_dedup.rs  integration_pipe_swap.rs  l2cap_mock.rs  mesh_integration.rs  mock_integration.rs
crates/iroh-ble/examples/: central.rs  iroh_ble.rs  peripheral.rs
crates/iroh-ble/src/: lib.rs
crates/iroh-ble/src/transport/: l2cap.rs  mod.rs  reliable.rs
demos/chat-tui/: Cargo.toml
demos/chat-tui/src/: main.rs
demos/iroh-ble-chat/: .gitignore  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml
demos/iroh-ble-chat/src/: main.ts  styles.css
demos/iroh-ble-chat/src-tauri/: Cargo.toml  Entitlements.mas.plist  Info.mas.plist  tauri.conf.json  tauri.mas.conf.json
demos/iroh-ble-chat/src-tauri/capabilities/: default.json  mobile.json
demos/iroh-ble-chat/src-tauri/icons/: icon.icns
demos/iroh-ble-chat/src-tauri/scripts/: bump-apple-version.sh  bump-ios-version.sh
demos/iroh-ble-chat/src-tauri/src/: image.rs  lib.rs  main.rs  webview_helper.rs
demos/protocol/: Cargo.toml
demos/protocol/src/: lib.rs
demos/support/: key_utils.rs
docs/superpowers/plans/: 2026-04-15-l2cap-revival.md
docs/superpowers/specs/: 2026-04-15-l2cap-revival-design.md
scripts/: deploy-android-all.sh  deploy-ios-all.sh  secrets.sh
