[workspace]
members = [
    "crates/iroh-ble-transport",
    "demos/protocol",
    "demos/iroh-ble-chat/src-tauri",
]
resolver = "2"

[patch.crates-io]
blew = { path = "../../blew/crates/blew" }

[workspace.metadata.release]
consolidate-commits = false
tag-message = "{{crate_name}}: release {{version}}"
pre-release-commit-message = "{{crate_name}}: release {{version}}"
push = false
publish = false
