[workspace]
members = [
    "crates/iroh-ble-transport",
    "demos/protocol",
    "demos/iroh-ble-chat/src-tauri",
]
resolver = "2"

[workspace.package]
rust-version = "1.95"

[workspace.metadata.release]
consolidate-commits = false
tag-message = "{{crate_name}}: release {{version}}"
pre-release-commit-message = "{{crate_name}}: release {{version}}"
push = true
publish = true
