[package]
name = "iroh-ble-transport"
version = "0.1.0-alpha.2"
edition = "2024"
authors = ["Jake McGinty <me@jakebot.org>"]
license = "AGPL-3.0-or-later"
description = "BLE transport for the iroh peer-to-peer networking stack"
repository = "https://github.com/mcginty/iroh-ble-transport"
keywords = ["bluetooth", "ble", "iroh", "p2p", "transport"]
categories = ["network-programming"]

[features]
testing = []

[dependencies]
blew = "0.1.0-alpha.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
tokio-stream = "0.1"
bytes = "1"
atomic-waker = "1"
iroh = { version = "0.97.0", features = ["unstable-custom-transports"] }
iroh-base = "0.97"
n0-watcher = "0.6"
n0-future = "0.3"
noq-udp = "0.9"
async-stream = "0.3"
parking_lot = "0.12"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
arc-swap = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.9"
blew = { version = "0.1.0-alpha.4", features = ["testing"] }
