[package]
name = "iroh-ble-chat-tui"
version = "0.1.0-alpha.2"
edition = "2024"
publish = false

[[bin]]
name = "chat-tui"
path = "src/main.rs"

[dependencies]
iroh-ble-transport = { path = "../../crates/iroh-ble-transport" }
iroh-ble-chat-protocol = { path = "../protocol" }
iroh = { version = "0.97", features = ["unstable-custom-transports"] }
iroh-gossip = "0.97"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
anyhow = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
bytes = "1"
blake3 = "1"
n0-future = "0.1"
futures = "0.3"
