[package]
name = "iroh-ble-chat-protocol"
version = "0.1.0-alpha.6"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
bytes = "1"
iroh = "0.97"
iroh-base = "0.97"
anyhow = "1"
rand = "0.9"
