[package]
name = "iroh-ble-chat-protocol"
version = "0.2.1"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
bytes = "1"
iroh = "0.98"
iroh-base = "0.98"
anyhow = "1"
rand = "0.9"
