[package]
name = "iroh-ble-chat"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iroh_ble_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh-ble = { path = "../../../crates/iroh-ble" }
iroh-ble-chat-protocol = { path = "../../protocol" }
iroh = { version = "0.97.0", features = ["unstable-custom-transports"] }
iroh-base = "0.97"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
anyhow = "1"
iroh-gossip = "0.97"
blake3 = "1"
bytes = "1"
postcard = { version = "1", features = ["alloc"] }
n0-future = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ravif = "0.11"
rgb = "0.8"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-blew = { git = "https://github.com/mcginty/blew.git" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
