[package]
name = "iroh-ble-chat"
version = "0.1.3"
edition = "2021"
rust-version.workspace = true
publish = false

[package.metadata.release]
pre-release-hook = ["./scripts/bump-ios-version.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iroh_ble_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh-ble-transport = { path = "../../../crates/iroh-ble-transport" }
iroh-ble-chat-protocol = { path = "../../protocol" }
iroh = { version = "0.98.0", features = ["unstable-custom-transports"] }
iroh-base = "0.98"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
anyhow = "1"
iroh-gossip = "0.98"
blake3 = "1"
bytes = "1"
postcard = { version = "1", features = ["alloc"] }
n0-future = "0.3"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
ravif = "0.13"
rgb = "0.8"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-blew = "0.2.3"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSDictionary",
    "NSNotification",
    "NSObject",
    "NSString",
    "NSValue",
    "NSGeometry",
] }
objc2-ui-kit = { version = "0.3", features = [
    "UIResponder",
    "UIView",
    "UIScrollView",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
block2 = "0.6"
